# auto_drive

./: .gitignore  README  rvizweb  sick_scan
base_local_planner/: CMakeLists.txt
base_local_planner/src/: follow_path_cost_function.cpp  goal_functions.cpp  local_planner_util.cpp  simple_scored_sampling_planner.cpp
base_local_planner/test/: test_scored_trajectory.cpp  wavefront_map_accessor.h
derobotee/: CMakeLists.txt  offset.sh  oneslave  package.xml  sendtopic  start_grind.sh  willo.yaml
derobotee/cfg/: diff.lua  pure_loc.lua
derobotee/launch/: amcl_demo.launch  debug.launch  debug1.launch  elevation_sensor.launch  grinder.lanuch  keyboard_teleop.launch  map.launch  pure_loc.launch  soem.launch  soem_test.launch  tester.launch  view_mobile_robot.launch
derobotee/maps/: rectangle  willo.yaml
derobotee/msg/: MotorCmd.msg  (+3 more)
imu/: CMakeLists.txt  package.xml
robot_size/: size.txt
simple_layers/: CMakeLists.txt  package.xml
sparrow_planner/: CMakeLists.txt  bgp_plugin.xml  package.xml
sparrow_planner/action/: sparrow.action
sparrow_planner/include/sparrow_planner/: sparrow_planner.h
sparrow_planner/msg/: grinding_path.msg
sparrow_planner/scripts/: grinding.py  path_test  path_utils.py  rotate.py  sparrow_action_server  sparrow_action_server.py  sparrow_action_server_test  utils.py
sparrow_planner/src/: sparrow_planner.cpp
sparrow_planner/srv/: GetPathIdx.srv  GetPlan.srv
test_code/: ani.py  ani_circle.py  arc.py  circle.py  cos_curve.py  diff.py  draw.py  duoble_pendulum.py  intersec.py  line.py  lineintersec.py  radius_fomular.py  radius_fomular_hl.py  radius_fomular_r.py  rotate.py  scale.py  send.py  shrink.py  slop_of_radius.py  test.py  trans.py  utils.py
(+62 files in other folders)
